# kairos

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kairos/: __init__.py  kaplan_meier.py  log_partial_likelihood.py  nelson_aalen.py  partial_log_likelihood.py
test/: test_kaplan_meier.py  test_partial_log_likelihood.py
