[project]
name = "kairos"
version = "0.1.0"
description = "Survival toolkit in JAX"
readme = "README.md"
authors = [
    { name = "Malek Ben Salah", email = "malek.ben-salah@centralsesupelec.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "jax>=0.9.1",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
